--- a/src/shared/bg-video/style.css
+++ b/src/shared/bg-video/style.css
@@ -7,13 +7,23 @@
 }
 .overlay {
   position: absolute;
-  top:30%;
-  left: 40%;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1;
 }
 .overlay h2 {
   color: aliceblue;
   font-size: 60px;
   font-weight: lighter;
+}
+.ovarlay-container{
+  width: 50%;
+}
+
+.overlay p {
+  margin: auto;
+  width: 50%;
 }
 
