--- a/src/shared/admin-sidebar/style.css
+++ b/src/shared/admin-sidebar/style.css
@@ -10,6 +10,12 @@
   color: #fff;
 }
 
+@media (max-width: 380px) {
+  .adminSidebar {
+    width: 180px;
+  }
+}
+
 .adminSidebar h1 {
   font-size: 1.6rem;
   margin-top: 10px;
