Finish news page

--- a/src/shared/admin-layout/style.css
+++ b/src/shared/admin-layout/style.css
@@ -1,9 +1,9 @@
-main {
+.admin-main {
   margin-left: 250px;
 }
 
 @media (max-width: 992px) {
-  main {
+  .admin-main {
     margin-left: 20px;
   }
 }
