--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+* {
+  color: #3D3D3D;
+}
+
 .heading {
-    width: 80%;
-    margin: 2rem auto;
+  width: 80%;
+  margin: 2rem auto;
 }
 
 .section {
-    padding: 7rem 0;
+  padding: 7rem 0;
+}
+
+.section-heading {
+  font-size: 3.5rem;
+  margin-bottom: 7rem;
 }
