--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+body {
   color: #3D3D3D;
 }
 
@@ -14,4 +14,5 @@
 .section-heading {
   font-size: 3.5rem;
   margin-bottom: 7rem;
+  color: #3D3D3D;
 }
