--- a/src/modules/main/submodules/services-component/components/list/style.css
+++ b/src/modules/main/submodules/services-component/components/list/style.css
@@ -1,56 +1,72 @@
 .slider-3d {
-  position: relative;
-  perspective: 1000px;
-  padding-top: 8rem;
-  padding-bottom: 14rem;
-}
-
-.slider-box {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
+  max-width: 100%;
 }
 
 .service-item {
-  position: absolute;
   border: 1px solid #ccc;
   padding: 1rem;
-  width: 40%;
   color: #000;
-  transition: transform 0.5s ease-out;
+  margin-bottom: 2rem;
+  transition: transform 0.5s ease-out, box-shadow 0.2s;
 }
 
-.slider-front {
-  transform: translate3d(0, -74px, 0);
-  background-color: #fff;
+@media (max-width: 991px)  {
+  .service-item:hover {
+    box-shadow: 5px 4px 9px 1px #333;
+  }
 }
 
-.front-right {
-  transform: translate3d(410px, -100px, -100px);
-  background-color: #fff;
-}
+@media (min-width: 992px) {
+  .slider-3d {
+    position: relative;
+    perspective: 1000px;
+    padding-top: 8rem;
+    padding-bottom: 14rem;
+  }
 
-.front-left {
-  transform: translate3d(-410px, -100px, -100px);
-  background-color: #fff;
-}
+  .slider-box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+  }
 
-.back-right {
-  transform: translate3d(420px, -240px, -1000px);
-  opacity: 0.5;
-}
+  .service-item {
+    position: absolute;
+    width: 40%;
+  }
 
-.back-left {
-  transform: translate3d(-420px, -240px, -1000px);
-  opacity: 0.5;
-}
+  .slider-front {
+    transform: translate3d(0, -74px, 0);
+    background-color: #fff;
+  }
 
-.slider-back {
-  transform: translate3d(0, -270px, -1100px);
-  opacity: 0.5;
-}
+  .front-right {
+    transform: translate3d(410px, -100px, -100px);
+    background-color: #fff;
+  }
 
-.service-heading {
-  margin-left: 2.3rem;
+  .front-left {
+    transform: translate3d(-410px, -100px, -100px);
+    background-color: #fff;
+  }
+
+  .back-right {
+    transform: translate3d(420px, -240px, -1000px);
+    opacity: 0.5;
+  }
+
+  .back-left {
+    transform: translate3d(-420px, -240px, -1000px);
+    opacity: 0.5;
+  }
+
+  .slider-back {
+    transform: translate3d(0, -270px, -1100px);
+    opacity: 0.5;
+  }
+
+  .service-heading {
+    margin-left: 2.3rem;
+  }
 }
