--- a/src/modules/main/submodules/home-page/components/distribution/style.css
+++ b/src/modules/main/submodules/home-page/components/distribution/style.css
@@ -3,9 +3,11 @@
   padding: 40px;
   margin-bottom: 100px;
 }
-section .info h3{
-    margin-bottom: 40px;
+section .content h3 {
+  margin-bottom: 40px;
 }
 .distribution img {
   width: 100%;
 }
+
+
