--- a/src/modules/main/submodules/home-page/components/intro/style.css
+++ b/src/modules/main/submodules/home-page/components/intro/style.css
@@ -25,7 +25,6 @@
     margin-right: 2rem;
   }
 }
-
 .dtpedia .dtpedia-link {
   border: 3px solid white;
   border-radius: 20px;
@@ -38,3 +37,9 @@
   font-weight: bold;
 }
 
+/* small screen*/
+@media (min-width: 768px) and (max-width: 991px) {
+  .dtpedia .dtpedia-link{
+    width: 100%;
+  }
+}
