--- a/src/modules/main/submodules/home-page/components/partners/style.css
+++ b/src/modules/main/submodules/home-page/components/partners/style.css
@@ -7,6 +7,11 @@
   padding: 50px;
   text-align: center;
 }
+@media (max-width: 576px) {
+  .partners .carousel-container {
+    width: 100%;
+  }
+}
 .carouselItem p {
   margin-top: 2rem;
   color: #fff;
