--- a/src/shared/header/style.css
+++ b/src/shared/header/style.css
@@ -1,7 +1,19 @@
-.logo{
-    width: 226px;
-    height: 64px;
+.logo {
+  width: 226px;
+  height: 64px;
 }
-nav ul li {
-    font-size: 20px;
+@media (max-width: 991px) {
+  nav.navbar ul.navbar-nav {
+    flex-direction: column;
+    height: 100 vh;
+  }
+}
+nav ul li.nav-item {
+  font-size: 20px;
+  padding: 10px;
+  transition: padding 0.2s;
+}
+
+nav ul li.nav-item:hover {
+  padding-left: 17px;
 }
