--- a/src/shared/footer/style.css
+++ b/src/shared/footer/style.css
@@ -2,8 +2,14 @@ footer{
     background-color: rgb(32, 31, 31);
     color: white;
     padding: 40px;
+    margin-top: 30px;
     line-height: 35px;
     font-size: 17px;
+    /* position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1; */
 }
 hr{
     background-color: #eaab00;
