--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@
 }
 
 body {
-  color: #3d3d3d;
+  color: #3d3d3d !important;
   font-family: "Basic", "sans-serif" !important;
+  background-color: #f8f9fa !important;
 }
 
 .heading {
