--- a/src/shared/header/style.css
+++ b/src/shared/header/style.css
@@ -2,6 +2,9 @@
   width: 226px;
   height: 64px;
 }
+.navbar.navbar--scrolled{
+  background-color: white;
+}
 @media (max-width: 991px) {
   nav.navbar ul.navbar-nav {
     flex-direction: column;
