--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 body {
   overflow-x: hidden;
-  color: #3d3d3d;
+  color: #3d3d3d !important;
   font-family: "Basic", "sans-serif" !important;
 }
 
@@ -16,6 +16,7 @@ body {
 
 .section {
   padding: 7rem 0;
+  background-color: #f8f9fa;
 }
 
 .section-heading {
