--- a/src/shared/footer/style.css
+++ b/src/shared/footer/style.css
@@ -5,14 +5,14 @@ footer{
     margin-top: 30px;
     line-height: 35px;
     font-size: 17px;
-    /* position: fixed;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1; */
+    z-index: -1;
 }
 hr{
-    background-color: #eaab00;
+    background-color: #CB6828;
     width: 30%;
     margin-left: 0px;
 }
