--- a/src/modules/main/submodules/services-component/components/list/style.css
+++ b/src/modules/main/submodules/services-component/components/list/style.css
@@ -10,6 +10,12 @@
   transition: transform 0.5s ease-out, box-shadow 0.2s;
 }
 
+@media (max-width: 768px) {
+  .service-body {
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 991px)  {
   .service-item:hover {
     box-shadow: 5px 4px 9px 1px #333;
