--- a/src/shared/footer/style.css
+++ b/src/shared/footer/style.css
@@ -1,21 +1,16 @@
-footer{
-    background-color: rgb(32, 31, 31);
-    color: white;
-    padding: 40px;
-    margin-top: 30px;
-    line-height: 35px;
-    font-size: 17px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: -1;
+footer {
+  background-color: rgb(32, 31, 31);
+  color: white;
+  padding: 40px;
+  margin-top: 30px;
+  line-height: 35px;
+  font-size: 17px;
 }
-hr{
-    background-color: #CB6828;
-    width: 30%;
-    margin-left: 0px;
+hr {
+  background-color: #cb6828;
+  width: 30%;
+  margin-left: 0px;
 }
-.item .icon{
-    margin-right: 17px;
+.item .icon {
+  margin-right: 17px;
 }
