--- a/src/modules/main/submodules/history-page/style.css
+++ b/src/modules/main/submodules/history-page/style.css
@@ -2,6 +2,7 @@
   margin-top: 92px;
   background-color: rgb(221, 220, 220);
 }
+
 .history h2 {
   text-align: center;
   margin-bottom: 50px;
@@ -9,15 +10,16 @@
   font-size: 3.5rem;
   font-weight: lighter;
 }
+
 /* The actual timeline (the vertical ruler) */
-.history-timline {
+.history-timeline {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
 }
 
 /* The actual timeline (the vertical ruler) */
-.history-timline::after {
+.history-timeline::after {
   content: "";
   position: absolute;
   width: 6px;
@@ -33,20 +35,22 @@
   padding: 10px 40px;
   position: relative;
   width: 50%;
+  transition: all 0.3s;
 }
 
 /* The circles on the timeline */
-.timeline-container::after {
+.timeline-container .after {
   content: "";
   position: absolute;
   width: 25px;
   height: 25px;
   right: -13px;
   background-color: white;
-  border: 4px solid #ff9f55;
+  border: 4px solid #CB6828;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
+  transition: all 0.3s;
 }
 
 /* Place the container to the left */
@@ -64,7 +68,7 @@
   content: " ";
   height: 0;
   position: absolute;
-  top: 30px;
+  top: 17px;
   width: 0;
   z-index: 1;
   right: 30px;
@@ -88,8 +92,13 @@
 }
 
 /* Fix the circle for containers on the right side */
-.right::after {
+.right .after {
   left: -13px;
+  transition: left 0.3s;
+}
+
+.right:hover .after {
+  left: -37px;
 }
 
 /* The actual content */
@@ -98,13 +107,25 @@
   background-color: snow;
   position: relative;
   border-radius: 6px;
-  margin-top: 10px;
+}
+
+.timeline-container.right:hover {
+  left: 52%
+}
+
+.timeline-container.left:hover {
+  left: -1rem
+}
+
+.timeline-container:hover .after {
+  right: -29px;
+  background-color: #CB6828;
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .history-timeline::after {
+  /* Place the timeline to the left */
+  .history-timeline .after {
     left: 31px;
   }
 
@@ -124,8 +145,8 @@
   }
 
   /* Make sure all circles are at the same spot */
-  .left::after,
-  .right::after {
+  .left .after,
+  .right .after {
     left: 15px;
   }
 
