--- a/src/shared/admin-sidebar/style.css
+++ b/src/shared/admin-sidebar/style.css
@@ -43,7 +43,8 @@
   transition: all 0.2s;
 }
 
-.adminSidebar .sidebarItem a:hover {
+.adminSidebar .sidebarItem a:hover,
+.adminSidebar .sidebarItem a.active {
     background-color: #fff;
     color: black;
     border-right: 2px solid #111;
