--- a/src/modules/main/submodules/home-page/components/intro/style.css
+++ b/src/modules/main/submodules/home-page/components/intro/style.css
@@ -1,3 +1,32 @@
+.video-container {
+  position: relative;
+}
+#video {
+  position: relative;
+  z-index: 0;
+}
+.overlay {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.overlay h2 {
+  color: aliceblue;
+  font-size: 60px;
+  font-weight: lighter;
+}
+.overlay-container{
+  width: 50%;
+}
+
+.overlay p {
+  margin: auto;
+}
+
 .overlay .vid-btn{
   width: 200px;
   border: 2px solid white;
@@ -13,7 +42,6 @@
   color: #3d3d3d;
 }
 .dtpedia {
-  margin-top: -6px;
   background-color: #CB6828;
   padding: 1rem;
   font-size: 1.3rem;
