--- a/src/modules/main/submodules/home-page/components/partners/style.css
+++ b/src/modules/main/submodules/home-page/components/partners/style.css
@@ -2,6 +2,10 @@
   background-color: #f8f9fa;
 }
 
+.carousel-container h2 {
+  font-size: 2.5rem;
+}
+
 .carouselItem {
   width: 100%;
   padding: 50px;
