--- a/src/modules/main/submodules/company-page/components/general-info/style.css
+++ b/src/modules/main/submodules/company-page/components/general-info/style.css
@@ -1,5 +1,5 @@
 .general-info{
-    margin-top: 92px;
+    margin-top: 100px;
     font-family: 'Open Sans', sans-serif;
     color: #757575;
 }
@@ -14,4 +14,13 @@
 .general-info span{
     display: block;
     margin: 20px 0;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+
+}
+.general-info .icon{
+    font-size: 50px;
+    color: #E6E6E6;
+    margin-right: 20px;
 }
