--- a/src/modules/dtpedia/components/page/style.css
+++ b/src/modules/dtpedia/components/page/style.css
@@ -22,18 +22,23 @@
 }
 
 .dtpedia-list {
-  border: 1px solid #ccc;
+  border:  1px solid #ccc;
+  border-top-color: #CB6828;
   padding: 0 !important;
 }
 
 .dtpedia-list a {
-  border-bottom: 1px solid #ccc;
   display: inline-block;
   width: 100%;
   padding: 10px 0;
   text-decoration: none;
-  background-color: white;
   color: #333;
+}
+
+.dtpedia-list a:hover,
+.dtpedia-list a.active {
+  color: #000;
+  text-decoration: none;
 }
 
 .dtpedia-list a.active {
@@ -41,8 +46,6 @@
   width: 100%;
   padding: 10px 0;
   text-decoration: none;
-  background-color: #f1f5f8;
-  color: #000;
 }
 
 .dtpedia-page-loading {
