--- a/src/modules/main/submodules/company-page/components/general-info/style.css
+++ b/src/modules/main/submodules/company-page/components/general-info/style.css
@@ -1,7 +1,7 @@
 .general-info{
     margin-top: 100px;
     font-family: 'Open Sans', sans-serif;
-    color: #757575;
+    color: #3d3d3d;
 }
 .general-info h2{
     margin: 55px 0;
