--- a/src/modules/main/submodules/company-page/components/brand-item/style.css
+++ b/src/modules/main/submodules/company-page/components/brand-item/style.css
@@ -1,7 +1,7 @@
 .brand-item{
     margin: 50px 0px;
     font-family: 'Open Sans', sans-serif;
-    color: #3d3d3d
+    color: #3d3d3d;
 }
 .brand-item h2 {
   text-align: center;
