--- a/src/modules/main/submodules/company-page/components/brand-item/style.css
+++ b/src/modules/main/submodules/company-page/components/brand-item/style.css
@@ -1,14 +1,14 @@
-.brand-item{
-    margin: 50px 0px;
-    font-family: 'Open Sans', sans-serif;
-    color: #3d3d3d;
+.brand-item {
+  margin: 50px 0px;
+  font-family: "Open Sans", sans-serif;
+  color: #3d3d3d;
 }
+
 .brand-item h2 {
   text-align: center;
 }
 .brand-item img {
   max-width: 100%;
-  margin-bottom: 20px;
 }
 .brand-item span {
   display: block;
