--- a/src/modules/projects/components/gallery/style.css
+++ b/src/modules/projects/components/gallery/style.css
@@ -8,20 +8,21 @@
 
 .active-project .project-image {
   margin-bottom: 0.3rem;
-  height: 45rem;
+  height: 25rem;
 }
 
 .active-project .project-overlay {
-  position: absolute;
-  bottom: 0.3rem;
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 3rem;
-  color: #fff;
-  display: none;
+  padding: 1rem;
+  margin-bottom: 0.3rem;
+  color: #000;
 }
 
-.active-project:hover .project-overlay {
-  display: block;
+.active-project .project-location {
+  text-transform: capitalize;
+}
+
+.active-project .project-location span {
+  color: #CB6828;
 }
 
 .gallery .projects-list {
