--- a/src/modules/main/submodules/home-page/components/partners/style.css
+++ b/src/modules/main/submodules/home-page/components/partners/style.css
@@ -6,6 +6,16 @@
   font-size: 2.5rem;
 }
 
+.carousel-container .carousel-control-next,
+.carousel-container .carousel-control-prev {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.carousel-container .carousel-control-next:hover,
+.carousel-container .carousel-control-prev:hover {
+  color: #000;
+}
+
 .carouselItem {
   width: 100%;
   padding: 50px;
