--- a/src/modules/main/submodules/history-page/style.css
+++ b/src/modules/main/submodules/history-page/style.css
@@ -1,6 +1,6 @@
 .history {
   margin-top: 92px;
-  background-color: rgb(221, 220, 220);
+  background-color: rgba(221, 220, 220, 0.5);
 }
 
 .history h2 {
@@ -22,7 +22,7 @@
 .history-timeline::after {
   content: "";
   position: absolute;
-  width: 6px;
+  width: 3px;
   background-color: white;
   top: 0;
   bottom: 0;
@@ -44,9 +44,9 @@
   position: absolute;
   width: 25px;
   height: 25px;
-  right: -13px;
+  right: -11px;
   background-color: white;
-  border: 4px solid #CB6828;
+  border: 2px solid #cb6828;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -63,6 +63,31 @@
   left: 50%;
 }
 
+.history-item {
+  position: relative;
+}
+
+.history-year  {
+  position: absolute;
+  top: 9px;
+  transition: all 0.2s;
+}
+
+.history-year h3 {
+  color: #cb6828;
+}
+
+.year-right {
+  width: 50%;
+  left: 54%;
+}
+
+.year-left {
+  width: 47%;
+  left: 0;
+  text-align: right;
+}
+
 /* Add arrows to the left container (pointing right) */
 .left::before {
   content: " ";
@@ -72,7 +97,7 @@
   width: 0;
   z-index: 1;
   right: 30px;
-  border: medium solid white;
+  border: 1px solid white;
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent white;
 }
@@ -86,7 +111,7 @@
   width: 0;
   z-index: 1;
   left: 30px;
-  border: medium solid white;
+  border: 1px solid white;
   border-width: 10px 10px 10px 0;
   border-color: transparent white transparent transparent;
 }
@@ -97,10 +122,6 @@
   transition: left 0.3s;
 }
 
-.right:hover .after {
-  left: -37px;
-}
-
 /* The actual content */
 .history-content {
   padding: 20px 30px;
@@ -109,17 +130,16 @@
   border-radius: 6px;
 }
 
-.timeline-container.right:hover {
-  left: 52%
+.history-item:hover .after {
+  background-color: #cb6828;
 }
 
-.timeline-container.left:hover {
-  left: -1rem
+.history-item:hover .year-right {
+  left: 56%;
 }
 
-.timeline-container:hover .after {
-  right: -29px;
-  background-color: #CB6828;
+.history-item:hover .year-left {
+  width: 45%;
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
@@ -139,7 +159,7 @@
   /* Make sure that all arrows are pointing leftwards */
   .timeline-container::before {
     left: 60px;
-    border: medium solid white;
+    border: 1px solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
   }
