--- a/src/modules/main/submodules/home-page/components/distribution/style.css
+++ b/src/modules/main/submodules/home-page/components/distribution/style.css
@@ -5,6 +5,6 @@ section .content h3 {
   margin-bottom: 40px;
 }
 .distribution img {
-  width: 100%;
-  position: relative;
+  width: 70%;
+  margin-left: 117px;
 }
