--- a/src/shared/social/style.css
+++ b/src/shared/social/style.css
@@ -1,23 +1,22 @@
 .social-links {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 0;
+  display: flex;
+  margin-bottom: 0;
 }
 
 .social-links .social-link-item {
-    margin: 0 0.3rem;
+  margin: 0 0.3rem;
 }
 
 .social-link-item a {
-    border-radius: 50%;
-    background-color: grey;
-    color: #fff;
-    padding: 0.4rem 0.6rem;
-    font-size: 1.3rem;
-    transition: all 0.2s;
+  border-radius: 50%;
+  background-color: grey;
+  color: #fff;
+  padding: 0.4rem 0.6rem;
+  font-size: 1.3rem;
+  transition: all 0.2s;
 }
 
 .social-link-item a:hover {
-    color: #fff;
-    background-color: #CB6828;
+  color: #fff;
+  background-color: #cb6828;
 }
